<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.sprd.sprdnote.MainActivity">
    <item
        android:id="@+id/action_search"
        app:actionViewClass="android.widget.SearchView"
        android:orderInCategory="100"
        android:title="@string/title_search"
        app:showAsAction="always" />
    <!--"android.support.v7.widget.SearchView"-->
    <item
        android:id="@+id/action_selected_all"
        android:orderInCategory="100"
        android:title="@string/select_all"
        app:showAsAction="never"
        android:visible="false"/>
    <item
        android:id="@+id/action_recovery"
        android:orderInCategory="100"
        android:title="@string/note_recovery"
        app:showAsAction="never"
        android:visible="false"/>
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/delete_tip"
        android:icon="@drawable/ic_delete"
        app:showAsAction="always"
        android:visible="false"/>
    <item
        android:id="@+id/action_move"
        android:orderInCategory="100"
        android:title="@string/note_move"
        android:icon="@drawable/ic_move"
        app:showAsAction="always"
        android:visible="false"/>
    <!-- android:icon="@mipmap/ic_search_holo_light""-->
</menu>
