<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.sprd.sprdnote.MainActivity">
    <item
        android:id="@+id/action_selected_all"
        android:orderInCategory="100"
        android:title="@string/select_all"
        app:showAsAction="never"
        android:visible="false"/>
    <item
        android:id="@+id/action_recovery"
        android:orderInCategory="100"
        android:title="@string/note_recovery"
        app:showAsAction="never"
        android:visible="false"/>
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/delete_forever"
        app:showAsAction="never"
        android:visible="false"/>

</menu>
